--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div id="header">
             <!-- Begin nav -->
             <ul id="nav">
-                <li><a href="">Home</a></li>
-                <li><a href="">Founder</a></li>
-                <li><a href="">Post</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#Founder">Founder</a></li>
+                <li><a href="#Post">Post</a></li>
+                <li><a href="#Contact">Contact</a></li>
                 <li>
                     <a href="">
                         More
@@ -53,7 +53,7 @@
   
         <div id="content">
             <!-- About us -->
-            <div class="content-section">
+            <div id="Founder" class="content-section">
                 <h2 class="section-heading">HOLH</h2>
                 <p class="section-sub-heading">Humans of Lê Quý Đôn - Hà Đông</p>
                 <p class="content-text">Humans of Le Quy Don Ha Dong Highschool (HOLH) là câu lạc bộ truyền thông đầu tiên của của trường THPT Lê Quý Đôn Hà Đông, được thành lập vào năm 2018 bởi 2 học sinh ôm trong mình niềm ước mơ, hoài bão to lớn và mong muốn lưu lại từng phút giây tuổi trẻ của mình dưới mái nhà THPT Lê Quý Đôn. Nhận được sự ủng hộ từ Ban Giám Hiệu và Ban Chấp hành Đoàn trường, HOLH trở thành nơi để những con người đang học tập và làm việc trong “bản Đôn” chia sẻ và lắng nghe đến những câu chuyện của mình. Chúng tôi mong muốn có thể thay mọi người lưu giữ và viết nên một thanh xuân thật đẹp cùng với nơi này.</p>
@@ -72,7 +72,7 @@
             </div>
             
             <!-- Product -->
-            <div class="product-section">
+            <div id="Post" class="product-section">
                 <div class="content-section">
                     <h2 class="section-heading white-text">CASA</h2>
                     <p class="section-sub-heading white-text">“ 𝐿𝑒 𝑄𝑢𝑦 𝐷𝑜𝑛 𝑒́𝑠𝑡𝑎 𝑒𝑛 𝑐𝑎𝑠𝑎 - 𝐿𝑒 𝑄𝑢𝑦 𝐷𝑜𝑛 𝑙𝑎̀ 𝑛ℎ𝑎̀ “</p>
@@ -120,7 +120,7 @@
             </div>
 
             <!-- Contact -->
-            <div class="content-section">
+            <div id="Contact" class="content-section">
                 <h2 class="section-heading">CONTACT</h2>
                 <p class="section-sub-heading">Fan? Drop a note!</p>
                 <div class="row row-padding">
